# service/models.py
@@ -1,4 +1,6 @@
+from datetime import datetime
 from service import db
+
 
 class UserModel(db.Model):
     id  = db.Column(db.Integer, primary_key=True)
@@ -7,3 +9,21 @@ class UserModel(db.Model):
 
     def __repr__(self):
         return f"User(username= {self.username}, pref_langs= {self.pre_langs})"
+
+
+class ContributionModel(db.Model):
+    id = db.Column(db.Integer, primary_key=True, index=True)
+    wd_item = db.Column(db.String(150))
+    username = db.Column(db.String(80))
+    lang_code = db.Column(db.String(25))
+    edit_type = db.Column(db.String(150))
+    data = db.Column(db.Text)
+    date = db.Column(db.Date, nullable=False,
+                     default=datetime.now().strftime('%Y-%m-%d'))
+
+    def __repr__(self):
+        return "Contribution({}, {}, {}, {})".format(
+               self.wd_item,
+               self.username,
+               self.lang_code,
+               self.date)
